force-app/main/default/objects/Referral_Contact__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <description>The Type of Referral</description>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 CPA Referring 3-4/Year</fullName>
            </value>
            <value>
                <fullName>11 CPA2BIZ Call</fullName>
            </value>
            <value>
                <fullName>12 CPA Call</fullName>
            </value>
            <value>
                <fullName>19 CPA2BIZ Referral</fullName>
            </value>
            <value>
                <fullName>3(16) Fiduciary Partner</fullName>
            </value>
            <value>
                <fullName>30 CPA Referring &lt;3/Year</fullName>
            </value>
            <value>
                <fullName>50 CPA Non-referring</fullName>
            </value>
            <value>
                <fullName>5 CPA Referring &gt;4/Year</fullName>
            </value>
            <value>
                <fullName>80 Remote Program</fullName>
            </value>
            <value>
                <fullName>90 Employee</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Bank Employee</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>IIA Contracted</fullName>
            </value>
            <value>
                <fullName>IIA General</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Money Manager</fullName>
            </value>
            <value>
                <fullName>MSP Partner</fullName>
            </value>
            <value>
                <fullName>Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Financial Advisor Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>