force-app/main/default/objects/Referral_Contact__c/fields/ReferralPartnerName__c.field-meta.xml
<CustomField>
    <fullName>ReferralPartnerName__c</fullName>
    <formula>CASE (TEXT(Referral_Account__r.Referral_Type__c)
, &quot;52 Bank Tier 1&quot; , &quot;Bank - Tier 1&quot;
, &quot;52 Bank Tier 2&quot; , &quot;Bank - Tier 2&quot;
,CASE (TEXT(Referral_Account__r.Referral_Source_Business_Type__c)
,&quot;Financial Services&quot;, &quot;Bank - Tier 2&quot;
,&quot;Accounting Firm&quot;, &quot;CPA&quot;
,&quot;Strategic Accountant Firm&quot;, &quot;CPA&quot;
,&quot;Strategic Account&quot;, &quot;Strategic Partner&quot;
,&quot;Broker&quot;, &quot;Financial Advisor&quot;
,&quot;Broker Dealer&quot;, &quot;Financial Advisor&quot;
,&quot;Broker Dealer Branch&quot;, &quot;Financial Advisor&quot;
,&quot;Insurance Carrier&quot;, &quot;Insurance Agent&quot;
,&quot;Insurance Broker&quot;, &quot;Insurance Agent&quot;
,&quot;Other&quot;, &quot;Other&quot;
,&quot;Paychex Co&quot;,IF( TEXT(Referral_Account__r.ReferralSourceSubType__c)==&quot;Advance Partners&quot;,&quot;Advance Partners&quot;,&quot;&quot;)
,&quot;&quot;
))</formula>
    <inlineHelpText>The name to use for the Referral Partner when creating a Referral record.</inlineHelpText>
    <label>Referral Partner Name</label>
    <type>Text</type>
</CustomField>