force-app/main/default/objects/Referral_Contact__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Paychex Sales Division</description>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
            <value>
                <fullName>PBS</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>BENETRAC</fullName>
            </value>
            <value>
                <fullName>DSR</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GENERIC</fullName>
            </value>
            <value>
                <fullName>HNB</fullName>
            </value>
            <value>
                <fullName>HNBF</fullName>
            </value>
            <value>
                <fullName>PAI</fullName>
            </value>
            <value>
                <fullName>PAI GENERI</fullName>
            </value>
            <value>
                <fullName>PAO</fullName>
            </value>
            <value>
                <fullName>PAS</fullName>
            </value>
            <value>
                <fullName>Stromberg</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
            </value>
            <value>
                <fullName>TIB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>