force-app/main/default/objects/Referral_Contact__c/fields/Sensitivity_401_k__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_401_k__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Referral Contact does not want Paychex selling 401(k) plans to mutual clients</description>
    <label>Sensitivity 401(k)</label>
    <type>Checkbox</type>
</CustomField>