force-app/main/default/objects/Referral_Contact__c/fields/Sensitivity_Credit_Card_Processing__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Credit_Card_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate if there is a sensitivity to credit card processing services - useful for MSP.</description>
    <label>Sensitivity Credit Card Processing</label>
    <type>Checkbox</type>
</CustomField>