force-app/main/default/objects/Referral_Contact__c/fields/Sensitivity_FSA__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_FSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Referral Contact does not want Paychex to sell FSA plans to mutual clients</description>
    <label>Sensitivity FSA</label>
    <type>Checkbox</type>
</CustomField>