force-app/main/default/objects/Referral_Contact__c/fields/Sensitivity_Health_Ins__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Health_Ins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitivity Health Ins</label>
    <type>Checkbox</type>
</CustomField>