force-app/main/default/objects/Referral_Contact__c/fields/Sensitivity_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Sales_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this Referral Source sell Sales Tax service?</description>
    <inlineHelpText>Does this Referral Source sell Sales Tax service?</inlineHelpText>
    <label>Sensitivity Sales Tax</label>
    <type>Checkbox</type>
</CustomField>