force-app/main/default/objects/Referral_Contact__c/fields/Sensitivity_Verified__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We verified which Paychex products the referral source is sensitive to us contacting our mutual clients about, because they offer similar products.</description>
    <label>Sensitivity Verified</label>
    <type>Checkbox</type>
</CustomField>