force-app/main/default/objects/Referral_Contact__c/fields/Sensitivity_Wrks_Comp__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Wrks_Comp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Referral Contact does not want Paychex to sell Workers Comp plans to mutual clients</description>
    <label>Sensitivity Wrks Comp</label>
    <type>Checkbox</type>
</CustomField>