force-app/main/default/objects/Referral_Contact__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Referral_Account__r.State_Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from the Referral Account</inlineHelpText>
    <label>Referral Account State</label>
    <type>Text</type>
</CustomField>