force-app/main/default/objects/Referral_Contact__c/fields/Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_2__c</fullName>
    <formula>Referral_Account__r.Street_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from the Referral Account</inlineHelpText>
    <label>Referral Account Street Address 2</label>
    <type>Text</type>
</CustomField>