force-app/main/default/objects/Referral_Contact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type TimeTrade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Pre-Demo Strategy Call</fullName>
            </value>
            <value>
                <fullName>Discovery - Standard Appt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>