force-app/main/default/objects/Referral_Contact__c/fields/Use_Account_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Use_Account_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this checkbox if you want to, on insert of the referral contact, use the same ownership values as the referral account.</inlineHelpText>
    <label>Use Account Ownership</label>
    <type>Checkbox</type>
</CustomField>