force-app/main/default/objects/Referral_Contact__c/fields/User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>User_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be the bridge back to the user record so We can bring the Area, Zone, and District to the referral contact record. Report requirements as part of the Paychex Explore Program</description>
    <label>User Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>