force-app/main/default/objects/Referral_Contact__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Is this referral contact record setup for online access?</inlineHelpText>
    <label>Online Access</label>
    <length>50</length>
    <type>Text</type>
</CustomField>