force-app/main/default/objects/Referral_Contact__c/fields/UsernameDate__c.field-meta.xml
<CustomField>
    <fullName>UsernameDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the username was set from Online</inlineHelpText>
    <label>Username Date</label>
    <type>Date</type>
</CustomField>