force-app/main/default/objects/Referral_Contact__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <formula>Referral_Account__r.Zip_Postal_Code__c</formula>
    <inlineHelpText>Pulled from the Referral Account</inlineHelpText>
    <label>Referral Account Zip Code</label>
    <type>Text</type>
</CustomField>