force-app/main/default/objects/Referral_Contact__c/recordTypes/CoreReferralRecordType.recordType-meta.xml
<RecordType>
    <fullName>CoreReferralRecordType</fullName>
    <active>true</active>
    <label>Core Referral Record Type</label>
</RecordType>