force-app/main/default/objects/Referral_Contact__c/recordTypes/HRSReferralRecordType.recordType-meta.xml
<RecordType>
    <fullName>HRSReferralRecordType</fullName>
    <active>true</active>
    <description>Used for HRS Referral Sources</description>
    <label>HRS Referral Record Type</label>
</RecordType>