force-app/main/default/objects/Referral_Contact__c/recordTypes/MMSReferralRecordType.recordType-meta.xml
<RecordType>
    <fullName>MMSReferralRecordType</fullName>
    <active>true</active>
    <label>MMS Referral Record Type</label>
</RecordType>