force-app/main/default/objects/Referral_Contact__c/recordTypes/PaychexInternalReferralContactRecordType.recordType-meta.xml
<RecordType>
    <fullName>PaychexInternalReferralContactRecordType</fullName>
    <active>true</active>
    <label>Paychex Internal Referral Contact Record Type</label>
</RecordType>