force-app/main/default/objects/Referral_Contact__c/recordTypes/Prism_PEO_Referral.recordType-meta.xml
<RecordType>
    <fullName>Prism_PEO_Referral</fullName>
    <active>true</active>
    <label>Prism PEO Referral</label>
</RecordType>