force-app/main/default/objects/Referral_Contact__c/recordTypes/Sales_Partner_Referral_Contact_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Sales_Partner_Referral_Contact_Record_Type</fullName>
    <active>true</active>
    <label>Sales Partner Referral Contact Record Type</label>
</RecordType>