force-app/main/default/objects/Referral_Contact__c/validationRules/Explore_Download_Icon.validationRule-meta.xml
<ValidationRule>
    <fullName>Explore_Download_Icon</fullName>
    <active>true</active>
    <description>Rep may not input this information unless Explore Date is populated with a date of today or past.</description>
    <errorConditionFormula>AND(OR(  ISNULL( Explore_Date__c) ,Explore_Date__c &gt; TODAY()),   NOT(  ISPICKVAL (Downloaded_Paychex_Icon__c, &quot;&quot;)))</errorConditionFormula>
    <errorMessage>*** YOU MAY NOT ANSWER DOWNLOAD QUESTION UNTIL EXPLORE DATE IS FILLED IN WITH A DATE OF TODAY OR EARLIER ***</errorMessage>
</ValidationRule>