force-app/main/default/objects/Referral_Contact__c/validationRules/If_the_SalesBroker_Primary_Record_check.validationRule-meta.xml
<ValidationRule>
    <fullName>If_the_SalesBroker_Primary_Record_check</fullName>
    <active>true</active>
    <description>users are not able to edit the attached list of fields on the Referral Contact if the SalesBroker Primary Record checkbox is checked on the Referral Account. Case# 24998492</description>
    <errorConditionFormula>NOT(ISNEW())&amp;&amp;(NOT(BEGINS($Profile.Name,&apos;System Admin&apos;)))&amp;&amp;( $Profile.Name&lt;&gt;&apos;2008-09 HRS 4S Sales Broker Rep&apos;)&amp;&amp; (NOT(BEGINS($Profile.Name,&apos;Sales Enablement&apos;))) &amp;&amp; NOT($UserRole.Name = &apos;HRS FINANCIAL ADVISOR WHOLESALER MANAGER&apos;) &amp;&amp; OR(SalesBroker_Primary_Record__c = True ,NOT(ISPICKVAL(Lock_Down_Record__c, &apos;&apos;)))&amp;&amp;
OR(OR(ISCHANGED( Referral_Account__c ),ISCHANGED( Name ),ISCHANGED( Elite_Partner__c ),ISCHANGED( Partner_Support_Rep__c ),ISCHANGED( Phone__c ),ISCHANGED( Phone_Ext__c ),ISCHANGED( Mobile_Phone__c ),ISCHANGED( Email__c ),ISCHANGED( Email_Opt_Out__c ),ISCHANGED( Mailing_Street__c ),ISCHANGED( Mailing_State__c ),ISCHANGED( Mailing_City__c ),ISCHANGED( Mailing_Postal_Code__c ),ISCHANGED( Mailing_Country__c ),ISCHANGED( Lock_Down_Record__c ),ISCHANGED(End_Date__c),ISCHANGED( Paychex_Flex__c ),ISCHANGED( Contact_ID__c ),ISCHANGED( Referral_ID__c ),ISCHANGED( Referral_Type__c),ISCHANGED( CRD_Number__c ),ISCHANGED( Broker_Id__c ),ISCHANGED( Branch__c ),ISCHANGED( Compensation_Type__c),ISCHANGED( Advisor_Record__c )),
AND(ISNEW(),OR(NOT(ISBLANK( Referral_Account__c )),NOT(ISBLANK( Name )),( Elite_Partner__c =True),NOT(ISBLANK(TEXT(Partner_Support_Rep__c))),( Hold_Out__c =True),NOT(ISBLANK( Phone__c )),NOT(ISBLANK( Phone_Ext__c )),NOT(ISBLANK( Mobile_Phone__c )),NOT(ISBLANK( Email__c )),( Email_Opt_Out__c =True),NOT(ISBLANK( Mailing_Street__c )),NOT(ISBLANK( Mailing_State__c )),NOT(ISBLANK( Mailing_City__c )),NOT(ISBLANK( Mailing_Postal_Code__c )),NOT(ISBLANK( Mailing_Country__c )),NOT(ISPICKVAL( Lock_Down_Record__c, &apos;&apos;)),(NOT(ISBLANK(End_Date__c))),(Paychex_Flex__c=True),NOT(ISBLANK( Contact_ID__c )),NOT(ISBLANK( Referral_ID__c )),NOT(ISBLANK(TEXT(Referral_Type__c) )),NOT(ISBLANK( CRD_Number__c)),NOT(ISBLANK( Broker_Rep_ID__c )),NOT(ISBLANK( Branch__c )),NOT(ISBLANK( TEXT(Compensation_Type__c))), (Advisor_Record__c=True)))
)</errorConditionFormula>
    <errorMessage>You are not allowed to edit some of the fields with Lockdown Record Field Checked.</errorMessage>
</ValidationRule>