force-app/main/default/objects/Referral_Contact__c/validationRules/Reason_at_Risk_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_at_Risk_Required</fullName>
    <active>true</active>
    <description>if CPA Health is Potential or At Risk, require Reason why</description>
    <errorConditionFormula>OR(ISPICKVAL(CPA_Health_Status__c,&apos;Potential Risk&apos;),
ISPICKVAL(CPA_Health_Status__c,&apos;At Risk&apos;)) 
&amp;&amp; 
 ISBLANK( Reason_at_Risk__c )</errorConditionFormula>
    <errorDisplayField>CPA_Health_Status__c</errorDisplayField>
    <errorMessage>You must fill in the Reason at Risk if CPA Health Status is Potential Risk or At Risk.</errorMessage>
</ValidationRule>