force-app/main/default/objects/Referral_Contact__c/validationRules/Unable_to_Change_Contact_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Unable_to_Change_Contact_field</fullName>
    <active>true</active>
    <description>Prevents Users from changing value of the Contact field if it already has a value.</description>
    <errorConditionFormula>AND( 
ISCHANGED(Contact__c), 
 (NOT(ISBLANK(PRIORVALUE(Contact__c)))),
 (NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))) 
)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>You cannot change the value of the Contact field.</errorMessage>
</ValidationRule>