force-app/main/default/objects/Referral_Contact__c/validationRules/Wholesaler_Verified_Checkbox_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Wholesaler_Verified_Checkbox_checked</fullName>
    <active>true</active>
    <description>When the &apos;Wholesaler Verified&apos; checkbox is checked few fields should not be editable by anyone except for the Record Owner</description>
    <errorConditionFormula>Wholesaler_Verified__c=True &amp;&amp; ( $User.Id != OwnerId) &amp;&amp; 
(ISCHANGED( Name) || ISCHANGED( Title__c) || ISCHANGED( Phone__c) || ISCHANGED( Mobile_Phone__c) || 
ISCHANGED( Email__c) || ISCHANGED( Referral_Type__c) || ISCHANGED( Mailing_Street__c) || ISCHANGED( Mailing_City__c) || 
ISCHANGED( Mailing_State__c) || ISCHANGED( Mailing_Postal_Code__c) || ISCHANGED( End_Date__c)) 
&amp;&amp; 
NOT(CONTAINS($Profile.Name, &quot;System Administrator&quot;)) 
&amp;&amp; 
NOT(CONTAINS($Profile.Name, &quot;Salesforce Support&quot;)) 
&amp;&amp; 
NOT(CONTAINS($Profile.Name, &quot;Sales Data Steward&quot;))</errorConditionFormula>
    <errorMessage>This record has been verified by the Internal Wholesaler and key fields can no longer be edited. If you need to make any changes on this record, please contact the owner of this record.</errorMessage>
</ValidationRule>