force-app/main/default/objects/Referral_Contact__c/listViews/ALL_Financial_Advisors.listView-meta.xml
<ListView>
    <fullName>ALL_Financial_Advisors</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
    <columns>RECORDTYPE</columns>
    <columns>Referral_Account__c</columns>
    <columns>NAME</columns>
    <columns>Referral_ID__c</columns>
    <columns>PAYX_ID__c</columns>
    <columns>Contact_ID__c</columns>
    <columns>Broker_Id__c</columns>
    <columns>Referral_Type__c</columns>
    <columns>Referral_Source_Credentials__c</columns>
    <columns>Group_number__c</columns>
    <columns>Email__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referral_Type__c</field>
        <operation>contains</operation>
        <value>Financial Advisor</value>
    </filters>
    <filters>
        <field>No_Longer_With_Company__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_QUARTER</value>
    </filters>
    <label>ALL Financial Advisors</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>