force-app/main/default/objects/Referral_Contact__c/listViews/All_My_CPAs_2.listView-meta.xml
<ListView>
    <fullName>All_My_CPAs_2</fullName>
    <columns>Referral_Account__c</columns>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Referral_ID__c</columns>
    <columns>Referral_Type__c</columns>
    <columns>Referral_Source_Credentials__c</columns>
    <columns>Group_number__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Street_Address_1__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PrimaryReferralType__c</field>
        <operation>equals</operation>
        <value>CPA</value>
    </filters>
    <filters>
        <field>No_Longer_With_Company__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>My CPAs (no end dates)</label>
    <sharedTo>
        <roleAndSubordinates>SeniorVPSales</roleAndSubordinates>
    </sharedTo>
</ListView>