force-app/main/default/objects/Referral_Contact__c/listViews/All_My_CPAs_enddated.listView-meta.xml
<ListView>
    <fullName>All_My_CPAs_enddated</fullName>
    <columns>Referral_Account__c</columns>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Street_Address_1__c</columns>
    <columns>Street_Address_2__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Preferred_Method__c</columns>
    <columns>Email__c</columns>
    <columns>Referral_Type__c</columns>
    <columns>AICPA_Enrolled__c</columns>
    <columns>Referral_Source_Credentials__c</columns>
    <columns>Referral_ID__c</columns>
    <columns>Birthday__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Referral_Type__c</field>
        <operation>contains</operation>
        <value>CPA</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>My CPAs (with end dates)</label>
    <sharedTo>
        <roleAndSubordinates>SeniorVPSales</roleAndSubordinates>
    </sharedTo>
</ListView>