force-app/main/default/objects/Referral_Contact__c/listViews/AllInternalReferralContacts.listView-meta.xml
<ListView>
    <fullName>AllInternalReferralContacts</fullName>
    <columns>NAME</columns>
    <columns>Referral_Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Rep_ID__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>End_Date__c</columns>
    <columns>Email__c</columns>
    <columns>Referral_ID__c</columns>
    <columns>HR_Person_ID__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Referral_Account__c</field>
        <operation>equals</operation>
        <value>Paychex Employees</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Internal Referral Contacts</label>
    <sharedTo>
        <group>CORE</group>
        <group>MMS</group>
    </sharedTo>
</ListView>