force-app/main/default/objects/Referral_Contact__c/listViews/Copy_of_My_Insurance_Agents1.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_Insurance_Agents1</fullName>
    <columns>NAME</columns>
    <columns>Referral_Account__c</columns>
    <columns>Phone__c</columns>
    <columns>Street_Address_1__c</columns>
    <columns>Street_Address_2__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Email__c</columns>
    <columns>Preferred_Method__c</columns>
    <columns>Referral_Type__c</columns>
    <columns>Referral_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PrimaryReferralType__c</field>
        <operation>contains</operation>
        <value>Health Insurance Broker,IIA General,Insurance Agent</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>No_Longer_With_Company__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>First_Name__c</field>
        <operation>equals</operation>
        <value>test</value>
    </filters>
    <label>Copy of My Insurance Agents</label>
</ListView>