force-app/main/default/objects/Referral_Contact__c/listViews/CPA_s_Enrolled_in_AICPA.listView-meta.xml
<ListView>
    <fullName>CPA_s_Enrolled_in_AICPA</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Referral_Account__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>Email__c</columns>
    <columns>Referral_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Referral_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>No_Longer_With_Company__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>AICPA_Enrolled__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </filters>
    <label>CPA&apos;s Enrolled in AICPA</label>
</ListView>