force-app/main/default/objects/Referral_Contact__c/listViews/CPAList.listView-meta.xml
<ListView>
    <fullName>CPAList</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Referral_Account__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>Email__c</columns>
    <columns>Referral_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Referral_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>User_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>No_Longer_With_Company__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All CPA List</label>
    <sharedTo>
        <group>HRSSales</group>
    </sharedTo>
</ListView>